Added math formula for strain on load cell. Cleaned some stuff up.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,7 @@
         "led_group_collection.h": "c",
         "chrono": "c",
         "complex": "c",
-        "stdint.h": "c"
+        "stdint.h": "c",
+        "led_group.h": "c"
     }
 }
