Added main.ino for Arduino, kept main.c but added __cplusplus guard to ensure it doesn't cause problems. Cleaned up math formulas and added voltage.c / voltage.h to isolate environmental variables. Updated readme with rudimentary build instructions.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,6 +4,8 @@
         "chrono": "c",
         "complex": "c",
         "stdint.h": "c",
-        "led_group.h": "c"
+        "led_group.h": "c",
+        "load_cell.h": "c",
+        "cmath": "c"
     }
 }
