--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,6 +6,7 @@
         "stdint.h": "c",
         "led_group.h": "c",
         "load_cell.h": "c",
-        "cmath": "c"
+        "cmath": "c",
+        "voltage.h": "c"
     }
 }
